--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Mises Web3 Search Engine"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
